--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Pryziv/recipeApi#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
-  }
+    "morgan": "^1.9.0",
+    "request": "^2.83.0"
+  },
+  "devDependencies": {}
 }
